--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
 
   <depend>rclpy</depend>
   <exec_depend>launch</exec_depend>
-  <exec_depend>robotnik_msgs</exec_depend>
+  <!-- <exec_depend>robotnik_msgs</exec_depend> -->
 
   <export>
     <build_type>ament_cmake</build_type>
